--- a/ui/ExportDer.ui
+++ b/ui/ExportDer.ui
@@ -42,10 +42,7 @@
         </font>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Arial'; font-size:14pt; font-weight:400; font-style:normal; text-decoration:none;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Export&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>Export</string>
        </property>
       </widget>
      </item>
