--- a/ui/ImportMulti.ui
+++ b/ui/ImportMulti.ui
@@ -1,10 +1,8 @@
-<ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ImportMulti</class>
- <widget class="QDialog" name="ImportMulti" >
-  <property name="geometry" >
+ <widget class="QDialog" name="ImportMulti">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -12,78 +10,75 @@
     <height>362</height>
    </rect>
   </property>
-  <property name="windowTitle" >
-   <string>ImportMulti_UI</string>
-  </property>
-  <layout class="QHBoxLayout" >
-   <property name="margin" >
-    <number>9</number>
-   </property>
-   <property name="spacing" >
+  <layout class="QHBoxLayout">
+   <property name="spacing">
     <number>6</number>
    </property>
+   <property name="margin">
+    <number>9</number>
+   </property>
    <item>
-    <widget class="QListView" name="listView" />
+    <widget class="QListView" name="listView"/>
    </item>
    <item>
-    <widget class="QFrame" name="frame" >
-     <property name="frameShape" >
+    <widget class="QFrame" name="frame">
+     <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
-     <property name="frameShadow" >
+     <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
-     <layout class="QVBoxLayout" >
-      <property name="margin" >
-       <number>9</number>
-      </property>
-      <property name="spacing" >
+     <layout class="QVBoxLayout">
+      <property name="spacing">
        <number>6</number>
       </property>
+      <property name="margin">
+       <number>9</number>
+      </property>
       <item>
-       <widget class="QPushButton" name="butOk" >
-        <property name="text" >
+       <widget class="QPushButton" name="butOk">
+        <property name="text">
          <string>Import &amp;All</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="butImport" >
-        <property name="text" >
+       <widget class="QPushButton" name="butImport">
+        <property name="text">
          <string>&amp;Import</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="butCancel" >
-        <property name="text" >
+       <widget class="QPushButton" name="butCancel">
+        <property name="text">
          <string>&amp;Done</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="butRemove" >
-        <property name="text" >
+       <widget class="QPushButton" name="butRemove">
+        <property name="text">
          <string>&amp;Remove</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="butDetails" >
-        <property name="text" >
+       <widget class="QPushButton" name="butDetails">
+        <property name="text">
          <string>Details</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer>
-        <property name="orientation" >
+        <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
-        <property name="sizeType" >
+        <property name="sizeType">
          <enum>QSizePolicy::Expanding</enum>
         </property>
-        <property name="sizeHint" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>204</width>
           <height>21</height>
@@ -92,14 +87,14 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="image" >
-        <property name="minimumSize" >
+       <widget class="QLabel" name="image">
+        <property name="minimumSize">
          <size>
           <width>200</width>
           <height>94</height>
          </size>
         </property>
-        <property name="scaledContents" >
+        <property name="scaledContents">
          <bool>true</bool>
         </property>
        </widget>
@@ -109,7 +104,6 @@
    </item>
   </layout>
  </widget>
- <pixmapfunction></pixmapfunction>
  <resources/>
  <connections>
   <connection>
@@ -118,11 +112,11 @@
    <receiver>ImportMulti</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>373</x>
      <y>131</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>287</x>
      <y>358</y>
     </hint>
