--- a/ui/NewCrl.ui
+++ b/ui/NewCrl.ui
@@ -1,35 +1,33 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>NewCrl</class>
- <widget class="QDialog" name="NewCrl" >
-  <property name="geometry" >
+ <widget class="QDialog" name="NewCrl">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>316</width>
-    <height>354</height>
+    <width>358</width>
+    <height>325</height>
    </rect>
   </property>
-  <property name="windowTitle" >
-   <string>Dialog</string>
-  </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
-    <number>9</number>
-   </property>
-   <property name="spacing" >
+  <layout class="QVBoxLayout">
+   <property name="spacing">
     <number>6</number>
    </property>
+   <property name="margin">
+    <number>9</number>
+   </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QLabel" name="TextLabel1" >
-       <property name="font" >
+      <widget class="QLabel" name="TextLabel1">
+       <property name="font">
         <font>
          <family>Arial</family>
          <pointsize>14</pointsize>
@@ -40,17 +38,17 @@
          <strikeout>false</strikeout>
         </font>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Create CRL</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -59,20 +57,20 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="image" >
-       <property name="minimumSize" >
+      <widget class="QLabel" name="image">
+       <property name="minimumSize">
         <size>
          <width>95</width>
          <height>40</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>95</width>
          <height>40</height>
         </size>
        </property>
-       <property name="scaledContents" >
+       <property name="scaledContents">
         <bool>true</bool>
        </property>
       </widget>
@@ -81,10 +79,10 @@
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>40</height>
@@ -93,102 +91,102 @@
     </spacer>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox" >
-     <property name="title" >
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
       <string>Dates</string>
      </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
+     <layout class="QGridLayout">
+      <property name="margin">
        <number>9</number>
       </property>
-      <property name="spacing" >
+      <property name="spacing">
        <number>6</number>
       </property>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_2" >
-        <property name="text" >
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
          <string>next update</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label" >
-        <property name="text" >
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
          <string>last update</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
-		  <widget class="Validity" native="1" name="lastUpdate" >
-			  <property name="displayFormat" >
-				  <string>yyyy-MM-dd hh:mm</string>
-			  </property>
-			  <property name="calendarPopup" > 
-				  <bool>true</bool>
-			  </property>
-			  <property name="timeSpec" >
-				  <enum>Qt::UTC</enum>
-			  </property>
-		  </widget>
+      <item row="0" column="1">
+       <widget class="Validity" name="lastUpdate">
+        <property name="displayFormat">
+         <string>yyyy-MM-dd hh:mm</string>
+        </property>
+        <property name="calendarPopup">
+         <bool>true</bool>
+        </property>
+        <property name="timeSpec">
+         <enum>Qt::UTC</enum>
+        </property>
+       </widget>
       </item>
-      <item row="1" column="1" >
-		  <widget class="Validity" native="1" name="nextUpdate">
-			  <property name="displayFormat" >
-				  <string>yyyy-MM-dd hh:mm</string>
-			  </property>
-			  <property name="calendarPopup" > 
-				  <bool>true</bool>
-			  </property>
-			  <property name="timeSpec" >
-				  <enum>Qt::UTC</enum>
-			  </property>
-		  </widget>
+      <item row="1" column="1">
+       <widget class="Validity" name="nextUpdate">
+        <property name="displayFormat">
+         <string>yyyy-MM-dd hh:mm</string>
+        </property>
+        <property name="calendarPopup">
+         <bool>true</bool>
+        </property>
+        <property name="timeSpec">
+         <enum>Qt::UTC</enum>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QLabel" name="label_3" >
-       <property name="text" >
+      <widget class="QLabel" name="label_3">
+       <property name="text">
         <string>Hashing algorithm</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="hashBox" name="hashAlgo" />
+      <widget class="hashBox" name="hashAlgo"/>
      </item>
     </layout>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox_2" >
-     <property name="title" >
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
       <string>Extensions</string>
      </property>
-     <layout class="QVBoxLayout" >
-      <property name="margin" >
-       <number>9</number>
-      </property>
-      <property name="spacing" >
+     <layout class="QVBoxLayout">
+      <property name="spacing">
        <number>6</number>
       </property>
+      <property name="margin">
+       <number>9</number>
+      </property>
       <item>
-       <widget class="QCheckBox" name="authKeyId" >
-        <property name="text" >
+       <widget class="QCheckBox" name="authKeyId">
+        <property name="text">
          <string>Authority key identifier</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="subAltName" >
-        <property name="text" >
+       <widget class="QCheckBox" name="subAltName">
+        <property name="text">
          <string>Subject alternative name</string>
         </property>
        </widget>
@@ -198,10 +196,10 @@
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>21</width>
        <height>20</height>
@@ -210,26 +208,26 @@
     </spacer>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QPushButton" name="cancelButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="cancelButton">
+       <property name="text">
         <string>Cancel</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>21</width>
          <height>21</height>
@@ -238,8 +236,8 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
         <string>OK</string>
        </property>
       </widget>
@@ -250,15 +248,15 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>hashBox</class>
-   <extends>QComboBox</extends>
-   <header>widgets/hashBox.h</header>
-  </customwidget>
-  <customwidget>
    <class>Validity</class>
    <extends>QDateTimeEdit</extends>
    <header>widgets/validity.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>hashBox</class>
+   <extends>QComboBox</extends>
+   <header>widgets/hashBox.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -276,11 +274,11 @@
    <receiver>NewCrl</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>224</x>
      <y>332</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>96</x>
      <y>254</y>
     </hint>
@@ -292,11 +290,11 @@
    <receiver>NewCrl</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>305</x>
      <y>332</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>179</x>
      <y>282</y>
     </hint>
