--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -2,17 +2,6 @@
 <ui version="4.0">
  <class>NewX509</class>
  <widget class="QDialog" name="NewX509">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>553</width>
-    <height>599</height>
-   </rect>
-  </property>
-  <property name="windowTitle">
-   <string>Dialog</string>
-  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QHBoxLayout">
@@ -428,12 +417,9 @@ If this list is disabled, you only can create a self-signed certificate.</string
              </widget>
             </item>
             <item row="0" column="2">
-             <widget class="QLabel" name="TextLabel4_2_2_2">
-              <property name="toolTip">
-               <string>O</string>
-              </property>
-              <property name="text">
-               <string>Organisation</string>
+             <widget class="QLabel" name="LorganisationName">
+              <property name="buddy">
+               <cstring>organisationName</cstring>
               </property>
              </widget>
             </item>
@@ -465,22 +451,16 @@ If this list is disabled, you only can create a self-signed certificate.</string
              </widget>
             </item>
             <item row="1" column="0">
-             <widget class="QLabel" name="TextLabel2_2_2">
-              <property name="toolTip">
-               <string>C</string>
-              </property>
-              <property name="text">
-               <string>Country code</string>
+             <widget class="QLabel" name="LcountryName">
+              <property name="buddy">
+               <cstring>countryName</cstring>
               </property>
              </widget>
             </item>
             <item row="2" column="0">
-             <widget class="QLabel" name="TextLabel3_2_3">
-              <property name="toolTip">
-               <string>ST</string>
-              </property>
-              <property name="text">
-               <string>State or Province</string>
+             <widget class="QLabel" name="LstateOrProvinceName">
+              <property name="buddy">
+               <cstring>stateOrProvinceName</cstring>
               </property>
              </widget>
             </item>
@@ -488,42 +468,23 @@ If this list is disabled, you only can create a self-signed certificate.</string
              <widget class="QLineEdit" name="stateOrProvinceName"/>
             </item>
             <item row="3" column="0">
-             <widget class="QLabel" name="TextLabel4_3_2">
-              <property name="toolTip">
-               <string>L</string>
-              </property>
-              <property name="text">
-               <string>Locality</string>
+             <widget class="QLabel" name="LlocalityName">
+              <property name="buddy">
+               <cstring>localityName</cstring>
               </property>
              </widget>
             </item>
             <item row="1" column="2">
-             <widget class="QLabel" name="TextLabel5_2_2">
-              <property name="toolTip">
-               <string>OU</string>
-              </property>
-              <property name="text">
-               <string>Organ. unit</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="2">
-             <widget class="QLabel" name="TextLabel6_2_2">
-              <property name="toolTip">
-               <string>CN</string>
-              </property>
-              <property name="text">
-               <string>Common name</string>
+             <widget class="QLabel" name="LorganisationalUnitName">
+              <property name="buddy">
+               <cstring>organisationalUnitName</cstring>
               </property>
              </widget>
             </item>
             <item row="3" column="2">
-             <widget class="QLabel" name="TextLabel7_2_2">
-              <property name="toolTip">
-               <string>emailAddress</string>
-              </property>
-              <property name="text">
-               <string>E-Mail address</string>
+             <widget class="QLabel" name="LemailAddress">
+              <property name="buddy">
+               <cstring>emailAddress</cstring>
               </property>
              </widget>
             </item>
@@ -538,10 +499,20 @@ If this list is disabled, you only can create a self-signed certificate.</string
               <property name="text">
                <string>Internal name</string>
               </property>
+              <property name="buddy">
+               <cstring>description</cstring>
+              </property>
              </widget>
             </item>
             <item row="0" column="3">
              <widget class="QLineEdit" name="organisationName"/>
+            </item>
+            <item row="2" column="2">
+             <widget class="QLabel" name="LcommonName">
+              <property name="buddy">
+               <cstring>commonName</cstring>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
@@ -600,6 +571,24 @@ If this list is disabled, you only can create a self-signed certificate.</string
             <property name="columnCount">
              <number>0</number>
             </property>
+            <attribute name="horizontalHeaderVisible">
+             <bool>false</bool>
+            </attribute>
+            <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+             <bool>true</bool>
+            </attribute>
+            <attribute name="horizontalHeaderStretchLastSection">
+             <bool>true</bool>
+            </attribute>
+            <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+             <bool>true</bool>
+            </attribute>
+            <attribute name="horizontalHeaderStretchLastSection">
+             <bool>true</bool>
+            </attribute>
+            <attribute name="horizontalHeaderVisible">
+             <bool>false</bool>
+            </attribute>
            </widget>
           </item>
          </layout>
@@ -820,7 +809,7 @@ It also copies the issuer and serial number from the issuer certificate. Normall
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <property name="spacing">
-           <number>-1</number>
+           <number>6</number>
           </property>
           <property name="margin">
            <number>0</number>
@@ -1321,9 +1310,6 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
                <height>107</height>
               </size>
              </property>
-             <property name="toolTip">
-              <string>Great picture , heh ?</string>
-             </property>
              <property name="scaledContents">
               <bool>true</bool>
              </property>
@@ -1515,7 +1501,7 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
      <item>
       <widget class="QPushButton" name="cancelButton">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -1541,7 +1527,7 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
      <item>
       <widget class="QPushButton" name="okButton">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -1637,12 +1623,60 @@ email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>96</x>
-     <y>569</y>
+     <x>89</x>
+     <y>518</y>
     </hint>
     <hint type="destinationlabel">
      <x>179</x>
      <y>282</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>okButton</sender>
+   <signal>clicked()</signal>
+   <receiver>NewX509</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>771</x>
+     <y>520</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>304</x>
+     <y>543</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>selfSignRB</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>serialNr</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>268</x>
+     <y>289</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>324</x>
+     <y>287</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>noWellDefinedExpDate</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>notAfter</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>656</x>
+     <y>298</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>162</x>
+     <y>302</y>
     </hint>
    </hints>
   </connection>
